crates/nash-can/src/snapshots/nash_can__module__tests__negation_requires_core_num.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntrait Num 'a where\n    negate : 'a -> 'a\nf x = -x\n"
---
[
    NegateWithoutNum {
        region: Region {
            start: Position {
                line: 5,
                column: 7,
            },
            end: Position {
                line: 5,
                column: 9,
            },
        },
    },
]
