crates/nash-can/src/snapshots/nash_can__module__tests__nested_record_type_in_alias_errors.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\ntype alias outer = { inner : { x : int } }\n"
info: diagnostic
---
nash::names::record_type_outside_alias

  × This record type needs a name:
   ╭─[src/Main.nash:2:30]
 1 │ module Main exposing (..)
 2 │ type alias outer = { inner : { x : int } }
   ·                              ───────────
   ╰────
  help: A record type is only allowed as the direct body of a type alias. Give this
        record a named alias.
